Added Infinite Scrolling and for that addded new slice and component

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,15 @@ ul>p {
     top: -20px;
 }
 
+.card-img-coin-block {
+    width: 53%;
+    height: 165px;
+    max-height: 100%;
+    margin: 0 auto;
+    position: relative;
+    top: -20px;
+}
+
 .profile-card-5 .card-img-block img {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.63);
